Optimisation : Replacing "new Short()" by "Short.valueOf()"